@@ -25,6 +25,8 @@ test_setup:
 	@./setup.sh $(TEST_BASEPATH)
 
 test: test_setup
+	# must test with same perl binary as the one to be used to run fink
+	# (which also must be coded into t/Services/execute_nonroot_okay.t)
 	@cd t && ./testmore.pl || find . -name '*.t' | sort | xargs /usr/bin/perl -I../perlmod -MTest::Harness -e 'runtests(@ARGV)'
 
 .PHONY: all test install
